Actually implementd OpenAPI generators instead of some wacky concoction that was created before
